--- a/static/style.css
+++ b/static/style.css
@@ -5,18 +5,22 @@
     box-sizing: border-box;
 }
 body{
-    margin-left: 50px;
     overflow-x: hidden;
-    background-position: right top;
+    background-image: url('https://images.unsplash.com/photo-1570475735025-6cd1cd5c779d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80');
+    background-size: cover;
+    font-family: 'Varela Round', sans-serif;
+    color: white;
+    font-weight: bolder;
 }
-
+.header-section{
+    background-color: #a927b940;
+}
 .raise
 {
 background-image:linear-gradient(to right,#EE6EB0 , #F28C89);
 padding:  12px 28px;
 border-radius: 20%;
 border:none;
-margin-left: 50%;
 }
 .raise:hover {
  background-image:linear-gradient(to right,#F28C89 , #EE6EB0);
@@ -24,6 +28,5 @@ margin-left: 50%;
   transform: translateY(-0.25em);
 }
 .box{
-    color:black;
     font-family: 'Varela Round', sans-serif;
 }
