--- a/templates/heart_pred.html
+++ b/templates/heart_pred.html
@@ -2,22 +2,21 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Heart Dieaseas Prediction</title>
+  <title>Heart Disease Prediction</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 
 </head>
 <body>
-
-<div class="row" >
- <div class="col-8">
-  <h4 class="mt-2 header-text"><u>Heart Dieases Prediction</u></h4>
+  <div class="row justify-content-center mt-4">
+  <div class="col-sm-12 col-lg-10 header-section">
+    <h4 class="mt-2 header-text text-center"><u>Heart Disease Prediction</u></h4>
   <form  action='/predict' method="POST" class="box">
   <div class="row">
     <div class="col">
       <div class="form-group">
         <label for="fname">Age:</label>
-        <input type="number" class="form-control" name="age" aria-describedby="Pregnancies" placeholder="">
+        <input type="number" class="form-control" name="age" aria-describedby="Pregnancies" placeholder="Enter Age">
       </div>
     </div>
     <div class="col">
@@ -35,7 +34,7 @@
   </div>
 
   <div class="row">
-    <div class="col">
+    <div class="col-sm-12 col-lg-2">
       <div class="form-group">
        <label for="fname">Fasting Blood Sugar:</label>
        <div class="form-check">
@@ -48,7 +47,7 @@
        </div>
       </div>
      </div>
-     <div class="col">
+     <div class="col-sm-12 col-lg-2">
       <div class="form-group">
        <label for="fname">Gender:</label>
        <div class="form-check">
@@ -61,7 +60,7 @@
        </div>
       </div>
      </div>
-     <div class="col">
+     <div class="col-sm-12 col-lg-4">
       <div class="form-group">
        <label for="fname">Resting Electrocardiographic</label>
        <div class="form-check">
@@ -138,16 +137,13 @@
   </div>
 </div>
 
- <button type="submit" class="raise">Check</button>
+<div class="text-center">
+  <button type="submit" class="raise">Check</button>
+</div>
 </form>
+<h4 class="text-white mt-3 text-uppercase text-center font-weight-bold">{{pred}}</h4>
+  </div>
 </div>
-
-<div class="col-4">
-  <img src="./../static/images/heart1.jpg" class="mt-4 img" width="110%" >
-  <h4 class="text-white mt-3 text-uppercase">{{pred}}</h4>
-</div>
-</div>
-
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src=".js/materialize.js"></script>
 <script src="js/init.js"></script>
