chnaged step size

--- a/templates/heart_pred.html
+++ b/templates/heart_pred.html
@@ -28,7 +28,7 @@
     <div class="col">
       <div class="form-group">
         <label for="fname">Blood Pressure</label>
-        <input type="number" class="form-control" name="trestbps" aria-describedby="" placeholder="Blood pressure in mm/Hg">
+        <input type="number" class="form-control" step="0.01" name="trestbps" aria-describedby="" placeholder="Blood pressure in mm/Hg">
       </div>
     </div>
   </div>
@@ -107,7 +107,7 @@
     <div class="col">
       <div class="form-group">
         <label for="fname">Cholestrol</label>
-        <input type="number" class="form-control" name="chol" aria-describedby="" placeholder="Serum cholestoral in mg/dl">
+        <input type="number" class="form-control" step="0.01" name="chol" aria-describedby="" placeholder="Serum cholestoral in mg/dl">
       </div>
     </div>
   </div>
@@ -117,15 +117,14 @@
  <div class="col">
     <div class="form-group">
       <label for="fname">Oldpeak</label>
-      <input type="number" class="form-control" name="oldpeak" aria-describedby="" placeholder="1 = upsloping; 2 = flat; 3 = downsloping">
+      <input type="number" class="form-control" step="0.01" name="oldpeak" aria-describedby="" placeholder="1 = upsloping; 2 = flat; 3 = downsloping">
       <small>ST depression induced by exercise relative to rest</small>
     </div>
   </div>
   <div class="col">
     <div class="form-group">
       <label for="fname">Thalach</label>
-      <input type="number" class="form-control" name="thalach" aria-describedby="" placeholder="Maximum heart rate">
-      <small>Maximum heart rate achieved</small>
+      <input type="number" class="form-control" name="thalach" aria-describedby="" placeholder="Enter maximum heart rate">
     </div>
    </div>
    <div class="col">
